--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>💖 Valentine Surprise</title>
-  <link href="./output.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+  <link href="./src/output.css" rel="stylesheet">
+  <link href="./src/style.css" rel="stylesheet">
   
   <style>
     /* ====================
