--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div id="verificationModal" class="modal-overlay">
     <div class="modal">
       <div class="flex flex-col items-center">
-        <img src="/assets/img/D.svg" alt="Please"class="w-18 h-16 ">
+        <img src="./assets/img/D.svg" alt="Please"class="w-18 h-16 ">
       </div>
       <h2 class="text-2xl font-bold text-pink-600 ">When does our love start?</h2>
       <br>
@@ -124,7 +124,7 @@
 
   <div id="failedverificationModal" class="modal-overlay hidden">
     <div class="modal flex flex-col items-center">
-      <img src="/assets/img/unverified.svg" alt="Verification Failed" class="w-17 h-17 m-4">
+      <img src="./assets/img/unverified.svg" alt="Verification Failed" class="w-17 h-17 m-4">
     
       <p class="text-sm font-bold text-black-600 mx-4">Verification failed</p>
       <p class="text-xm text-black-200/25 dark:text-dark-400/25 mx-4">You've inputted incorrect date.
@@ -140,7 +140,7 @@
   <div id="proposalModal" class="modal-overlay hidden">
     <div class="modal">
       <div class="flex flex-col items-center">
-      <img src="/assets/img/please.svg" alt="Please"class="w-18 h-16 ">
+      <img src="./assets/img/please.svg" alt="Please"class="w-18 h-16 ">
       </div>
       <br>
       <h2 class="text-2xl font-bold text-pink-600 mb-4">💖 Will you be my Valentine?</h2>
@@ -153,7 +153,7 @@
   <div id="successModal" class="modal-overlay hidden">
     <div class="modal">
       <div class="flex flex-col items-center">
-        <img src="/assets/img/yey.svg" alt="Please"class="w-18 h-16 ">
+        <img src="./assets/img/yey.svg" alt="Please"class="w-18 h-16 ">
         </div>
         <br>
       <h2 class="text-2xl font-bold text-pink-600 mb-4">🎉 Yay! You Did It! 💕</h2>
@@ -186,9 +186,9 @@
     const yesBtn = document.getElementById("yesBtn");
     const continueBtn = document.getElementById("continueBtn");
     const heartImg = new Image();
-    heartImg.src = '/assets/img/h.png';
+    heartImg.src = './assets/img/h.png';
     const flower = new Image();
-    flower.src = '/assets/img/cherry-blossom.png';
+    flower.src = './assets/img/cherry-blossom.png';
 
     // Auto-move focus and allow only digits
     boxes.forEach((box, idx) => {
